# financial-news

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
apps/api/: main.py
apps/worker/: celery_app.py  tasks.py
config/: sources.example.yaml  watchlist.example.yaml
docs/: ops.md  security.md
infra/: Dockerfile  docker-compose.test.yml  docker-compose.yml
infra/k3s/: deployment.yaml
scripts/: deploy.sh  install.sh  test-integration.sh  test-local.sh
tests/integration/: test_api.py  test_ingestion.py
tests/unit/: test_blob_store.py  test_chunker.py  test_dedup.py  test_evidence_guard.py  test_portfolio_parser.py  test_scorer.py
